--- a/HEALTH_INSURANCE_CROSS_SELL_PREDICTION.ipynb
+++ b/HEALTH_INSURANCE_CROSS_SELL_PREDICTION.ipynb
@@ -4302,7 +4302,7 @@
       "source": [
         "Observation -\n",
         "\n",
-        "RandomForestClassifier is performing well in terms of accuracy.\n",
+        "RandomForestClassifier is performing well in terms of accuracy, but recall is very less.\n",
         "\n"
       ]
     },
